--- a/src/main/resources/templates/VendorLogin.html
+++ b/src/main/resources/templates/VendorLogin.html
@@ -34,7 +34,7 @@
             formdata.append("email", email);
             formdata.append("pass", password);
             
-            fetch("/AdminLogin", {method: "POST", body: formdata})
+            fetch("/VendorLogin", {method: "POST", body: formdata})
                     .then(response => response.text())
                     .then(ans => renderHTML(ans));
             
@@ -46,7 +46,7 @@
                if (ans.trim().toLowerCase() === "success")
                 {
                     alert("Success!!!");
-                    window.location.href="/AdminHome";
+                    window.location.href="/VendorHome";
                 } else
                 {
                     alert("failed");
@@ -329,7 +329,7 @@
                         <div class="col-lg-6 mil-mb-15 mil-up">
                             <div class="mil-hero-form-frame mil-bg-m-4 mil-br-md">
                                 <div class="mil-aic mil-column">
-                                    <h3 class="mil-fs-32 mil-tac mil-lh-140 mil-mb-60">Admin Login</h3>
+                                    <h3 class="mil-fs-32 mil-tac mil-lh-140 mil-mb-60">Vendor Login</h3>
                                 </div>
                                 <form>
                                     <div class="row">
