Edit Signup Details

--- a/src/main/resources/templates/AdminManageServiceProviders.html
+++ b/src/main/resources/templates/AdminManageServiceProviders.html
@@ -631,7 +631,7 @@
                 <div class="mil-p-0-15">
                     <div class="container">
                         <div class="mil-section-title mil-mb-f mil-up">
-                            <h2 class="mil-fs-36">Additional services</h2>
+                            <h2 class="mil-fs-36">Manage Vendors</h2>
                             <div class="mil-dots"></div>
                             <b class="mil-fs-24">02</b>
                         </div>
