--- a/src/main/resources/templates/VendorHome.html
+++ b/src/main/resources/templates/VendorHome.html
@@ -50,12 +50,11 @@
                 padding: 20px;
             }
 
-            .card-body h1.btn {
-                font-size: 4rem; /* Adjust as needed */
+            .card-body .btn {
+                font-size: 3rem;     /* Adjust this size as needed */
                 font-weight: 700;
-                padding: 20px 0;
+                padding: 12px 0;
                 border-radius: 0 0 16px 16px;
-                pointer-events: none;
                 line-height: 1.5;
                 margin: 0;
                 width: 100%;
@@ -65,8 +64,8 @@
                 border: none;
                 text-align: center;
             }
-            
-            
+
+
         </style>
     </head>
 
@@ -196,7 +195,7 @@
                     <button class="mil-side-btn mil-open-window mil-hover-bri-120"></button>
                 </div>
             </div>
-            
+
 
             <!-- dynamic content -->
             <div id="swupMain" class="transition-fade">
@@ -301,10 +300,10 @@
                         <!-- Card 1 -->
                         <div class="col-sm-3 mb-4">
                             <a href="/VendorManagePhotos" class="card-link">
-                                <div class="card h-100 clickable-card bg-light text-center">
-                                    <img src="img/ui/icons/2.png" class="card-img-top" alt="Manage Photos">
+                                <div class="card h-100 clickable-card text-center">
+                                    <img src="img/ui/icons/ManagePhotos.png" class="card-img-top img-fluid" alt="Manage Photos">
                                     <div class="card-body d-flex flex-column justify-content-center">
-                                        <h1 class="btn btn-primary card-title">Manage Photos</h1>
+                                        <div class="btn btn-primary card-title">Manage Photos</div>
                                     </div>
                                 </div>
                             </a>
@@ -312,11 +311,11 @@
 
                         <!-- Card 2 -->
                         <div class="col-sm-3 mb-4">
-                            <a href="/VendorManagePhotos" class="card-link">
-                                <div class="card h-100 clickable-card bg-light text-center">
-                                    <img src="img/ui/icons/2.png" class="card-img-top" alt="Manage Photos">
+                            <a href="/EditDetail" class="card-link">
+                                <div class="card h-100 clickable-card text-center">
+                                    <img src="img/ui/icons/EditDetails.png" class="card-img-top img-fluid" alt="Edit Personal Details">
                                     <div class="card-body d-flex flex-column justify-content-center">
-                                        <h1 class="btn btn-primary card-title">Manage Photos</h1>
+                                        <div class="btn btn-primary card-title">Edit Personal Details</div>
                                     </div>
                                 </div>
                             </a>
@@ -328,19 +327,19 @@
                                 <div class="card h-100 clickable-card bg-light text-center">
                                     <img src="img/ui/icons/2.png" class="card-img-top" alt="Manage Photos">
                                     <div class="card-body d-flex flex-column justify-content-center">
-                                        <h1 class="btn btn-primary card-title">Manage Photos</h1>
+                                        <div class="btn btn-primary card-title">Manage Photos</div>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        
+
                         <!-- Card 4 -->
                         <div class="col-sm-3 mb-4">
                             <a href="/VendorManagePhotos" class="card-link">
                                 <div class="card h-100 clickable-card bg-light text-center">
                                     <img src="img/ui/icons/2.png" class="card-img-top" alt="Manage Photos">
                                     <div class="card-body d-flex flex-column justify-content-center">
-                                        <h1 class="btn btn-primary card-title">Manage Photos</h1>
+                                        <div class="btn btn-primary card-title">Manage Photos</div>
                                     </div>
                                 </div>
                             </a>
@@ -348,6 +347,8 @@
                     </div>
                 </div>
                 <!-- services end -->
+
+
 
                 <!-- services -->
                 <div class="mil-p-0-15">
