--- a/src/main/resources/templates/VendorSignUp.html
+++ b/src/main/resources/templates/VendorSignUp.html
@@ -86,6 +86,7 @@
                 console.log(ans);
                 if (ans === "success") {
                     alert("Vendor added successfully!");
+                    window.location.href="/VendorLogin";
                 } else if (ans === "exists") {
                     alert("Vendor already exists.");
                 } else {
