Single Vendor Details Showed

--- a/src/main/resources/templates/ShowAvailableVendors.html
+++ b/src/main/resources/templates/ShowAvailableVendors.html
@@ -107,9 +107,10 @@
                 var vd = arr[i];
                 var imgPath = "myUploads/" + vd.vphoto;
                 var vn = vd.vname;
+                var vid = vd.vid;
                 s += `
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                        <div class="card clickable-card shadow-sm h-100" style="cursor: pointer;" onclick="">
+                        <div class="card clickable-card shadow-sm h-100" style="cursor: pointer;" onclick="goToVendorDetail('${vid}')">
                             <img src="${imgPath}" class="img-fluid rounded-top" style="height: 300px; object-fit: cover;" alt="Image">
                             <div class="card-body text-center d-flex flex-column justify-content-between">
                                 <div class="btn btn-primary city-name-btn">${vn}</div>
@@ -121,6 +122,11 @@
             
             s += '</div></div>';
             document.getElementById("d1").innerHTML = s;
+            }
+            
+            function goToVendorDetail(vid) {
+                var url = "/UserShowServiceProvidersDetail?vid=" + vid;
+                window.location.href = url;
             }
 
         </script>
