--- a/src/main/resources/templates/VendorHome.html
+++ b/src/main/resources/templates/VendorHome.html
@@ -298,7 +298,7 @@
                 <div class="container">
                     <div class="row">
                         <!-- Card 1 -->
-                        <div class="col-sm-3 mb-4">
+                        <div class="col-sm-4 mb-4">
                             <a href="/VendorManagePhotos" class="card-link">
                                 <div class="card h-100 clickable-card text-center">
                                     <img src="img/ui/icons/ManagePhotos.png" class="card-img-top img-fluid" alt="Manage Photos">
@@ -310,7 +310,7 @@
                         </div>
 
                         <!-- Card 2 -->
-                        <div class="col-sm-3 mb-4">
+                        <div class="col-sm-4 mb-4">
                             <a href="/EditDetail" class="card-link">
                                 <div class="card h-100 clickable-card text-center">
                                     <img src="img/ui/icons/EditDetails.png" class="card-img-top img-fluid" alt="Edit Personal Details">
@@ -322,28 +322,17 @@
                         </div>
 
                         <!-- Card 3 -->
-                        <div class="col-sm-3 mb-4">
-                            <a href="/VendorManagePhotos" class="card-link">
+                        <div class="col-sm-4 mb-4">
+                            <a href="/VendorManageBookings" class="card-link">
                                 <div class="card h-100 clickable-card bg-light text-center">
                                     <img src="img/ui/icons/2.png" class="card-img-top" alt="Manage Photos">
                                     <div class="card-body d-flex flex-column justify-content-center">
-                                        <div class="btn btn-primary card-title">Manage Photos</div>
+                                        <div class="btn btn-primary card-title">Manage Bookings</div>
                                     </div>
                                 </div>
                             </a>
                         </div>
 
-                        <!-- Card 4 -->
-                        <div class="col-sm-3 mb-4">
-                            <a href="/VendorManagePhotos" class="card-link">
-                                <div class="card h-100 clickable-card bg-light text-center">
-                                    <img src="img/ui/icons/2.png" class="card-img-top" alt="Manage Photos">
-                                    <div class="card-body d-flex flex-column justify-content-center">
-                                        <div class="btn btn-primary card-title">Manage Photos</div>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
                     </div>
                 </div>
                 <!-- services end -->
