--- a/src/main/resources/templates/payment.html
+++ b/src/main/resources/templates/payment.html
@@ -428,11 +428,16 @@
                 <!-- hero end -->
 
                 <!-- contact form and map -->
-                <div class="col-lg-12 mil-aic">   <button  class="mil-btn mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-hover-scale mil-ml-60 mil-sm-ml-30" type="button" onclick="cash()">CASH</button>
-                </div>
+                <div class="container mil-mb-60">
+                    <div class="row">
+                        <div class="col-lg-6 mil-aic mil-jcc">   
+                            <button  class="mil-btn mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-hover-scale mil-ml-60 mil-sm-ml-30" type="button" onclick="cash()">CASH</button>
+                        </div>
 
-                <div class="col-lg-12 mil-aic">
-                    <button  class="mil-btn mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-hover-scale mil-ml-60 mil-sm-ml-30" type="button" onclick="online()">ONLINE</button>
+                        <div class="col-lg-6 mil-aic mil-jcc">
+                            <button  class="mil-btn mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-hover-scale mil-ml-60 mil-sm-ml-30" type="button" onclick="online()">ONLINE</button>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- footer -->
