--- a/src/main/resources/templates/UserLogin.html
+++ b/src/main/resources/templates/UserLogin.html
@@ -46,7 +46,7 @@
                 if (ans.trim().toLowerCase() === "success")
                 {
                     alert("Success!!!");
-                    window.location.href = "/UserHome";
+                    window.location.href = "/";
                 } else
                 {
                     alert("failed");
